https://github.com/craftercms/craftercms/issues/1795 - [studio-ui] long internal names bleed over tool tip #1795 - FireFox

--- a/static-assets/styles/temp.css
+++ b/static-assets/styles/temp.css
@@ -3497,7 +3497,11 @@ span.acn-page-deleted a, span.acn-page-deleted a:hover {
   vertical-align: top; }
 
 .acn-tooltip .acn-name {
-  word-break: break-word; }
+  /* For Firefox */
+  white-space: pre-wrap;
+  word-break: break-all;
+  /* For Chrome and IE */
+  word-wrap: break-word; }
 
 .acn-width80 {
   width: 80px; }
